force-app/main/default/objects/Trip__c/fields/International_Travel__c.field-meta.xml
<CustomField>
    <fullName>International_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Travel</label>
    <type>Checkbox</type>
</CustomField>