force-app/main/default/objects/Trip__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>