force-app/main/default/objects/Trip__c/validationRules/Budget_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Budget must be a positive value</description>
    <errorConditionFormula>NOT(ISNULL(Estimated_Budget__c)) &amp;&amp; Estimated_Budget__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Estimated_Budget__c</errorDisplayField>
    <errorMessage>Estimated budget must be a positive value.</errorMessage>
</ValidationRule>