force-app/main/default/objects/Trip__c/validationRules/Budget_Required_For_International.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Required_For_International</fullName>
    <active>true</active>
    <description>Budget is required for international travel</description>
    <errorConditionFormula>International_Travel__c = TRUE &amp;&amp; ISNULL(Estimated_Budget__c)</errorConditionFormula>
    <errorDisplayField>Estimated_Budget__c</errorDisplayField>
    <errorMessage>Estimated budget is required for international travel.</errorMessage>
</ValidationRule>