force-app/main/default/objects/Trip__c/validationRules/Requesting_Employee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Requesting_Employee_Required</fullName>
    <active>true</active>
    <description>Requesting Employee field is required</description>
    <errorConditionFormula>ISNULL(Requesting_Employee__c)</errorConditionFormula>
    <errorDisplayField>Requesting_Employee__c</errorDisplayField>
    <errorMessage>Requesting Employee is required.</errorMessage>
</ValidationRule>