force-app/main/default/objects/Trip__c/validationRules/Start_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Must_Be_Future</fullName>
    <active>true</active>
    <description>Start date must be today or in the future</description>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date must be today or in the future.</errorMessage>
</ValidationRule>